# fastmem

./: .gitignore  CMakeLists.txt  fastmem.sln
fastmem/: exception_registry.hpp  exception_registry_linux.cpp  exception_registry_windows.cpp  fastmem.vcxproj  fastmem.vcxproj.filters  main.cpp  noitree.hpp  vmem.cpp  vmem.hpp  vmem_linux.cpp  vmem_unix.cpp  vmem_windows.cpp  win32_apis.hpp  x86.hpp
